ChangeLog for Simple Chat Client
========================= 

Version 1.0.14 (unknown date)
================================
* Fixed update
* Many bugfixes

Version 1.0.13 (30.06.2011)
================================
* Fixed offline messages
* Added button Find text
* Added button Send to notes
* Added shortcut ctrl+tab and ctrl+shift+tab
* Changed main layout
* Fixed cam support in linux
* Many bugfixes

Version 1.0.12 (20.05.2011)
================================
* Added auto-away
* New nicklist
* Fixed logs - default saved by date
* Many bugfixes

Version 1.0.11 (29.04.2011)
================================

* Fixed auth
* Added menu "open link"
* Added offline messages support
* Many bugfixes

Version 1.0.10 (14.04.2011)
================================

* Fixed pasting multi-line
* Fixed lag
* Fixed classic style
* Fixed network reconnect
* Added my profile
* Fixed config
* Added linux reading cam frame using v4l2
* Added age check for Erotic channels
* Fixed options layout
* Fixed kamerzysta support
* Added user stats 
* Added channel stats 
* Fixed network quit
* Added basic syntax highlighter
* Added detect already running scc
* Added background image
* Added awaylog
* Added basic cam support for linux
* Many bugfixes