@@ -51,6 +51,7 @@ private:
     QString cmd_busy();
     QString cmd_away();
     QString cmd_offmsg();
+    QString cmd_mp3();
     QString cmd_quit();
     QString cmd_help();
     QString cmd_cycle();
