@@ -1,0 +1,44 @@
+/****************************************************************************
+ *                                                                          *
+ *   This file is part of Simple Chat Client                                *
+ *   Copyright (C) 2011 Piotr Łuczko <piotr.luczko@gmail.com>               *
+ *                                                                          *
+ *   This program is free software: you can redistribute it and/or modify   *
+ *   it under the terms of the GNU General Public License as published by   *
+ *   the Free Software Foundation, either version 3 of the License, or      *
+ *   (at your option) any later version.                                    *
+ *                                                                          *
+ *   This program is distributed in the hope that it will be useful,        *
+ *   but WITHOUT ANY WARRANTY; without even the implied warranty of         *
+ *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the          *
+ *   GNU General Public License for more details.                           *
+ *                                                                          *
+ *   You should have received a copy of the GNU General Public License      *
+ *   along with this program.  If not, see <http://www.gnu.org/licenses/>.  *
+ *                                                                          *
+ ****************************************************************************/
+
+#ifndef WINAMP_H
+#define WINAMP_H
+
+#include <QObject>
+#include <windows.h>
+
+class Winamp : public QObject
+{
+    Q_OBJECT
+public:
+    Winamp();
+
+    bool isRunning();
+    int state();
+    QString version();
+    QString song();
+    QString position();
+    QString length();
+
+private:
+    HWND hwnd_winamp;
+};
+
+#endif // WINAMP_H
