@@ -3,6 +3,7 @@ ChangeLog for Simple Chat Client
 
 Version 1.0.14 (unknown date)
 ================================
+* Added /mp3 command
 * Fixed update
 * Many bugfixes
 
